envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 3500
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: edge
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  virtual_hosts:
                    - name: direct_response_service
                      domains: [ "*" ]
                      routes:
                        - match:
                            prefix: "/api/users"
                          route:
                              cluster: users
                        - match:
                            prefix: "/api/challenges"
                          route:
                              cluster: challenges
                        - match:
                            prefix: "/api/flashcards"
                          route:
                              cluster: flashcards
                        - match:
                            prefix: "/api/notes"
                          route:
                               cluster: notes
                        - match:
                            prefix: "/api/features"
                          route:
                              cluster: features

  clusters:
    - name: users
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: users
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: users
                      port_value: 3500
    - name: challenges
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: challenges
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: challenges
                      port_value: 3500
    - name: flashcards
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: flashcards
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: flashcards
                      port_value: 3500
    - name: notes
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: notes
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: notes
                      port_value: 3500
    - name: features
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: features
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: features
                      port_value: 3500
